--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "hls.js": "^1.6.5",
+    "plyr": "^3.7.8",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "shaka-player": "^4.15.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
