--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "hls.js": "^1.6.5",
+    "mux.js": "^6.3.0",
     "plyr": "^3.7.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
