--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "hls.js": "^1.6.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
+    "clappr": "^0.3.13",
+    "hls.js": "^1.6.6",
     "mux.js": "^6.3.0",
     "plyr": "^3.7.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "shaka-player": "^4.15.2"
+    "rx-player": "^4.3.0",
+    "shaka-player": "^4.15.2",
+    "video.js": "^8.23.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
