--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "plyr": "^3.7.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "rx-player": "^4.3.0",
     "shaka-player": "^4.15.2",
     "video.js": "^8.23.3"
