--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1",
     "rx-player": "^4.3.0",
     "shaka-player": "^4.15.2",
     "video.js": "^8.23.3"
