--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.1",
+    "axios": "^1.12.1",
     "clappr": "^0.3.13",
     "hls.js": "^1.6.9",
     "mux.js": "^6.3.0",
